# sly1

./: .gitattributes  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.MD  CONTRIBUTING.md  Doxyfile  Makefile  README.md  STYLEGUIDE.md  Sly1Decomp.sln  _config.yml  actseg_8h_source.html  alarm_8h_source.html  alo_8h_source.html  annotated.html  appveyor.yml  appveyor.yml.x  aseg_8h_source.html  bas_8h_source.html  basic_8h_source.html  bis_8h_source.html  bq_8h_source.html  brx_8h_source.html  cat_8h_source.html  checksum.sha1  chkpnt_8h_source.html  classCBinaryAsyncStream-members.html  classCBinaryAsyncStream.html  classCBinaryInputStream-members.html  classCBinaryInputStream.html  classCBinaryInputStream__coll__graph.map  classCBinaryInputStream__coll__graph.md5  classCByteQueue-members.html  classCByteQueue.html  classCCatalog-members.html  classCCatalog.html  classCCatalog__coll__graph.md5  classCFileLocation-members.html  (+245 more)
P2/: CMakeLists.txt  gs.h
Sly1Decomp/: CMakeLists.txt  Sly1Decomp.vcxproj  Sly1Decomp.vcxproj.filters  cheats.cpp  cheats.h  main.cpp  savegame.cpp  savegame.h
Sly1Decomp/src/: CMakeLists.txt  main.cpp
Sly1Decomp/src/Cheats/: cheats.cpp
Sly1Decomp/src/Difficulty/: difficulty.cpp  difficulty.h
Sly1Decomp/src/Savegame/: savegame.cpp  savegame.h
Sly1Decomp/src/Util/: util.cpp  util.h
config/: readme.md  readme.txt  sly1.yaml  sly1_may19.yaml  symbol_addrs.txt  symbol_addrs_may19.txt  symbol_addrs_old.txt
disc/: readme.md  readme.txt
docs/: BEGINNERSGUIDE.md  CMakeLists_8txt.html  CONTRIBUTING.md  CONTRIBUTING_8md.html  README_8md.html  STYLEGUIDE.md  STYLEGUIDE_8md.html  actseg_8h.html  actseg_8h__incl.map  actseg_8h__incl.md5  actseg_8h_source.html  alarm_8h.html  alarm_8h_source.html  alo_8h.html  alo_8h__dep__incl.map  alo_8h__dep__incl.md5  alo_8h_source.html  annotated.html  annotated_dup.js  aseg_8h.html  aseg_8h__dep__incl.map  aseg_8h__incl.map  aseg_8h__incl.md5  aseg_8h_source.html  bas_8cpp.html  bas_8cpp__incl.map  bas_8cpp__incl.md5  bas_8cpp_source.html  bas_8h.html  bas_8h.js  bas_8h__dep__incl.map  bas_8h__dep__incl.md5  bas_8h__incl.map  bas_8h__incl.md5  bas_8h_source.html  basic_8h.html  basic_8h__dep__incl.map  basic_8h__dep__incl.md5  basic_8h_source.html  bis_8cpp.html  (+744 more)
html/: 989snd_8c.html  989snd_8c.js  989snd_8c__incl.map  989snd_8c__incl.md5  989snd_8c_source.html  989snd_8h.html  989snd_8h.js  989snd_8h__dep__incl.map  989snd_8h__dep__incl.md5  989snd_8h__incl.map  989snd_8h__incl.md5  989snd_8h_source.html  BEGINNERSGUIDE_8md.html  CMakeLists_8txt.html  CONTRIBUTING_8md.html  DISTROBOX_8md.html  P2_2CMakeLists_8txt.html  P2_2splice_2CMakeLists_8txt.html  README_8md.html  STYLEGUIDE_8md.html  ac_8c.html  ac_8c.js  ac_8c__incl.map  ac_8c__incl.md5  ac_8c_source.html  ac_8h.html  ac_8h.js  ac_8h__dep__incl.map  ac_8h__dep__incl.md5  ac_8h__incl.map  ac_8h__incl.md5  ac_8h_source.html  act_8c.html  act_8c.js  act_8c__incl.map  act_8c__incl.md5  act_8c_source.html  act_8h.html  act_8h.js  act_8h__dep__incl.map  (+5131 more)
include/: 989snd.h  CBinaryInputStream.h  CFileLocation.h  CTransition.h  FileLocation.h  MPeg.h  TextBox.h  WalCatalog.h  ac.h  act.h  actseg.h  alarm.h  alo.h  anim.h  aseg.h  asega.h  barrier.h  bas.h  basic.h  bbmark.h  bez.h  binoc.h  bis.h  blend.h  blip.h  bomb.h  bq.h  break.h  brx.h  bsp.h  button.h  cat.h  cd.h  cheats.h  chkpnt.h  cid.h  clip.h  clock.h  cm.h  cnvo.h  (+153 more)
latex/: annotated.tex  classCBinaryAsyncStream.tex  classCBinaryInputStream.tex  classCBinaryInputStream__coll__graph.md5  classCByteQueue.tex  classCCatalog.tex  classCCatalog__coll__graph.md5  classCFileLocation.tex  classCFont.tex  classCMpeg.tex  classCMpegAudio.tex  classCMpeg__coll__graph.md5  classCProg.tex  classCProg__coll__graph.md5  classCQueueOutputIop.tex  classCRef.tex  classCTextBox.tex  classCTransition.tex  classCWalCatalog.tex  classCWalCatalog__coll__graph.md5  files.tex  gs_8h.tex  gs_8h__dep__incl.md5  md_README.tex  refman.tex  structACTLA.tex  structACTLA__coll__graph.md5  (+76 more)
src/: CBinaryInputStream.cpp  CFileLocation.cpp  CMakeLists.txt  CTransition.cpp  FileLocation.cpp  Mpeg.cpp  TextBox.cpp  WalCatalog.cpp  actseg.cpp  alarm.cpp  aseg.cpp  bas.cpp  bis.cpp  cat.cpp  cheats.cpp  clock.cpp  coin.cpp  dialog.cpp  difficulty.cpp  font.cpp  game.cpp  gs.cpp  joy.cpp  keyhole.cpp  main.cpp  mat.cpp  mpeg.cpp  prog.cpp  readme.md  readme.txt  savegame.cpp  screen.cpp  sensor.cpp  so.cpp  speaker.cpp  sw.cpp  transition.cpp  ui.cpp  util.cpp  vec.cpp  (+4 more)
src/P2/: .game.c.swp  989snd.c  CMakeLists.txt  ac.c  act.c  actseg.c  actseg.h  alarm.c  alarm.cpp  alarm.h  alo.c  alo.cpp  alo.h  aseg.c  aseg.h  asega.c  barrier.c  bas.c  bas.cpp  bas.h  basic.c  basic.cpp  basic.h  bbmark.c  bez.c  binoc.c  bis.c  bis.cpp  bis.cpp.x  bis.h  blend.c  blip.c  bomb.c  bq.c  bq.h  break.c  brx.c  brx.cpp  brx.h  bsp.c  (+231 more)
src/P2/splice/: CMakeLists.txt  bif.cpp  eval.cpp  frame.cpp  gc.cpp  method.cpp  pair.cpp  proc.cpp  ref.c  ref.cpp  serialize.cpp  sidebag.cpp  spliceutils.cpp  spliceutils.h  splotheap.cpp  vecmat.cpp
src/P2/temp/: do_not_remove.txt
src/p2/: cm.cpp  frm.cpp  main.h
src/sce/: rand.c
test/: AddUnitTest.cmake  CMakeLists.txt  assert.h  test.h
test/cheats/: CMakeLists.txt  chetkidotest.cpp  test.cpp
test/clock/: CMakeLists.txt  set_clock_rate.cpp
test/coin/: CMakeLists.txt  collect_coins.cpp  collecttest.cpp  test.cpp
test/difficulty/: CMakeLists.txt  change_suck.cpp  difficultytest.cpp  sucktest.cpp  test.cpp  world_preload.cpp  worldloadtest.cpp
test/game/: CMakeLists.txt  charm_available.cpp  charmavailabletest.cpp  charmcounttest.cpp  charmtest.cpp  coincounttest.cpp  cointest.cpp  set_charm_count.cpp  set_coin_count.cpp  test.cpp
test/gs/: CMakeLists.txt  calculate_gs_percent.cpp  percenttest.cpp
test/joy/: CMakeLists.txt  add_fcht.cpp  chetkido.cpp  chetkidotest.cpp
test/savegame/: CMakeLists.txt  percenttest.cpp
test/util/: CMakeLists.txt  limit_abs.cpp  limit_lm.cpp  limit_lm_test.cpp
test/xform/: CMakeLists.txt  set_exits.cpp  setexitstest.cpp  xformtest.cpp
(+966 files in other folders)
