project(SCUS-97198)

cmake_minimum_required(VERSION 3.12)
set(CMAKE_CXX_STANDARD 20)

set(ELF_TARGET SCUS_971.98)
set(P2_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src/P2)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

add_subdirectory(src)

add_executable(${ELF_TARGET} ${P2_SOURCE_DIR}/main.cpp)
target_link_libraries(${ELF_TARGET} PUBLIC P2)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/tests)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/tests)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/tests)

enable_testing()
add_subdirectory(test)
